Self-contained Java package.